--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <span class="status">現在の桁数: <span id="digitCount">0</span></span>
 </div>
 
-<textarea class="auto-resize-textarea" id="textarea" placeholder="次の円周率の数値を入力してください..."></textarea>
+<textarea class="auto-resize-textarea" id="textarea" placeholder="小数点以下の円周率の数値を入力してください..."></textarea>
 
 <div class="input-popup" id="inputPopup">
     <label for="digitInput">入力する桁数:</label>
